--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "reveal.js"]
 	path = reveal.js
 	url = https://github.com/hakimel/reveal.js.git
+[submodule "sources/projects/fizzbuzz-example"]
+	path = sources/projects/fizzbuzz-example
+	url = https://github.com/clemsonacm/fizzbuzz-example
