--- a/sources/templates/source/Makefile
+++ b/sources/templates/source/Makefile
@@ -1,10 +1,10 @@
 CXX?=clang++
-CXXFLAGS = -Wall -Werror -Wpedantic
+CXXFLAGS+=-Wall -Werror -Wpedantic
 BINS = max functors tuples template_metaprogramming  \
 	   baseclass subclass variadic specialization
 .PHONY: all test clean
 all: $(BINS)
-variadic:  CXXFLAGS+=-std=c++14
+variadic:  CXXFLAGS+=-std=c++1z
 baseclass: CXXFLAGS+=-std=c++11
 subclass:  CXXFLAGS+=-std=c++11
 tuples:    CXXFLAGS+=-std=c++14
