--- a/sources/templates/source/DockerfileLLVM
+++ b/sources/templates/source/DockerfileLLVM
@@ -1,6 +1,6 @@
 FROM llvm
 
-RUN dnf install -y gdb ctags vim
+RUN dnf install -y gdb ctags vim make
 COPY *.cc Makefile /examples/
 WORKDIR /examples/
 
