use marker for better folding

--- a/sources/templates/source/Makefile
+++ b/sources/templates/source/Makefile
@@ -1,14 +1,16 @@
 CXX?=clang++
 CXXFLAGS+=-Wall -Werror -Wpedantic
 BINS = max functors tuples template_metaprogramming  \
-	   baseclass subclass variadic specialization
+	   baseclass subclass variadic specialization \
+	   partial
 .PHONY: all test clean
 all: $(BINS)
+max:       CXXFLAGS+=-std=c++11
+partial:   CXXFLAGS+=-std=c++11
 variadic:  CXXFLAGS+=-std=c++1z
 baseclass: CXXFLAGS+=-std=c++11
 subclass:  CXXFLAGS+=-std=c++11
 tuples:    CXXFLAGS+=-std=c++14
-max:       CXXFLAGS+=-std=c++11
 functors:  CXXFLAGS+=-std=c++14
 specialization: CXXFLAGS+=-std=c++14
 test: all
