tweak after practicing

--- a/sources/templates/source/Makefile
+++ b/sources/templates/source/Makefile
@@ -1,8 +1,8 @@
-CXX?=clang++
+CXX=clang++
 CXXFLAGS+=-Wall -Werror -Wpedantic
 BINS = max functors tuples template_metaprogramming  \
 	   baseclass subclass variadic specialization \
-	   partial
+	   partial  policy
 .PHONY: all test clean
 all: $(BINS)
 max:       CXXFLAGS+=-std=c++11
@@ -13,6 +13,7 @@ subclass:  CXXFLAGS+=-std=c++11
 tuples:    CXXFLAGS+=-std=c++14
 functors:  CXXFLAGS+=-std=c++14
 specialization: CXXFLAGS+=-std=c++14
+policy: CXXFLAGS+=-std=c++14
 test: all
 	./specialization
 clean:
